# webhook_repo

./: .env.sample  .gitignore  README.md  mongotest.py  pip_requirements.txt  pyproject.toml  uv-run-step.txt  uv_requirements.txt
README/: Conclusion.md  ENV.md  Prerequisites.md  Run.md
app/: __init__.py  extensions.py
app/ui/: __init__.py  routes.py
app/webhook/: __init__.py  routes.py
static/: style.css
templates/: dashboard.html
